# utils

./: .dockerignore  .func.sh  .gitignore  .tmuxp.yaml  :  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
tests/cli/: __init__.py  common.py  test_StatusCode.py  test_check_env.py  test_generate_eggname.py  test_is_kebab_case.py  test_is_lower_case.py  test_is_snake_case.py  test_parse_version.py
utils/: __init__.py  cli.py  config.py  debugger.py  fnc.py  object_viewer.py  optimisator.py  stop_watch.py  stopwatch.py  test.py  unique  utils.c
