[metadata]
name = utils
version = attr: utils.__version__
author = Aymeric Guth
author_email = aymeric.guth@protonmail.com
url = https://git.ars-virtualis.org/yul/utils
description = misc utiliy functions
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
# python_requires = >=3.10
zip_safe = True
include_package_data = True

[options.packages.find]
exclude =
    tests*
    build*
    dist*
    docs*
    essais*
    lsfiles.egg-info*

[options.entry_points]
console_scripts = 
    is_kebab_case=utils.cli:_is_kebab_case
    is_snake_case=utils.cli:_is_snake_case
    is_lower_case=utils.cli:_is_lower_case
    parse_version=utils.cli:_parse_version
    generate_eggname=utils.cli:_generate_eggname
    expand_toml=utils.cli:_expand_toml
    to_snake_case=utils.cli:_to_snake_case
    to_kebab_case=utils.cli:_to_kebab_case
    match_pairs=utils.cli:_match_pairs
    resolve_path=utils.cli:_resolve_path
    
[options.package_data]
lsfiles = py.typed
* = README.md

[flake8]
# See https://github.com/PyCQA/pycodestyle/issues/373
ignore = E203
# Recommend matching the black line length (default 88),
# rather than using the flake8 default of 79:
max-line-length = 88
#max-complexity = 12
#select = B,C,E,F,W,B9
exclude = .venv/, tests/*
